checkmate logic